[gd_scene load_steps=4 format=3 uid="uid://k7vbjjk7f0ow"]

[ext_resource type="Script" uid="uid://b0w0dlwokcgdd" path="res://scenes/base_level.gd" id="1_xb4v1"]
[ext_resource type="PackedScene" uid="uid://qw4t1jhklxar" path="res://scenes/ui/ui.tscn" id="3_ukglk"]
[ext_resource type="PackedScene" uid="uid://1bh4uwh2gi2i" path="res://scenes/player/player.tscn" id="4_xb4v1"]

[node name="Level" type="Node2D"]
scale = Vector2(1, 0.998386)
script = ExtResource("1_xb4v1")

[node name="Projectiles" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="Player" parent="." instance=ExtResource("4_xb4v1")]
position = Vector2(447, 588.951)

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(0.5, 0.5)
position_smoothing_enabled = true

[node name="Lighting" type="Node2D" parent="."]

[node name="UI" parent="." instance=ExtResource("3_ukglk")]

[connection signal="grenade_empty" from="Player" to="." method="_on_player_grenade_empty"]
[connection signal="grenade_shot" from="Player" to="." method="_on_player_grenade_shot"]
[connection signal="laser_empty" from="Player" to="." method="_on_player_laser_empty"]
[connection signal="laser_shot" from="Player" to="." method="_on_player_laser_shot"]
[connection signal="player_hit" from="Player" to="." method="_on_player_player_hit"]
